syntax = "proto3";

package order;

service OrdersService {
    rpc SetOrderStatus (SetOrderDto) returns (Order) {}
}

message SetOrderDto {
    string orderId = 1;
    string status = 2;
}

message Order {
    repeated Product products = 2;
    double amount = 3;
    string paymentStatus = 4;
}

message Product {
    string productId = 1;
    double quantity = 2;
    double unitPrice = 3;
    optional double discount =4;
}
